--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,17 @@ Package: rlme
 Type: Package
 Title: Rank-based Estimation and Prediction in Random Effects Nested
         Models
-Version: 0.2
+Version: 0.3
 Date: 2013-07-07
 Author: Yusuf Bilgic, Herb Susmann and Joseph McKean
 Maintainer: Yusuf Bilgic <bilgic@geneseo.edu>
 Description: Estimates robust rank-based fixed effects and predicts robust random effects in two- and three- level random effects nested models.
 License: GPL (>= 2)
-Imports: MASS, quantreg, nlme, mgcv, stringr, magic
-Packaged: 2013-07-21 21:47:57 UTC; ykb
-NeedsCompilation: no
+Imports: MASS, quantreg, nlme, mgcv, stringr, magic, robustbase
+Suggests: testthat
+Packaged: 2014-05-23 17:50:16 UTC; herb
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-07-22 01:00:23
+Date/Publication: 2014-05-25 20:14:34
+Depends: Rcpp (>= 0.10.3)
+LinkingTo: Rcpp
