--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,17 @@ Package: rlme
 Type: Package
 Title: Rank-based Estimation and Prediction in Random Effects Nested
         Models
-Version: 0.3
+Version: 0.4
 Date: 2013-07-07
 Author: Yusuf Bilgic, Herb Susmann and Joseph McKean
 Maintainer: Yusuf Bilgic <bilgic@geneseo.edu>
 Description: Estimates robust rank-based fixed effects and predicts robust random effects in two- and three- level random effects nested models.
 License: GPL (>= 2)
-Imports: MASS, quantreg, nlme, mgcv, stringr, magic, robustbase
+Imports: MASS, quantreg, nlme, mgcv, stringr, magic, robustbase, Rcpp
+        (>= 0.11.1)
 Suggests: testthat
-Packaged: 2014-05-23 17:50:16 UTC; herb
 NeedsCompilation: yes
-Repository: CRAN
-Date/Publication: 2014-05-25 20:14:34
-Depends: Rcpp (>= 0.10.3)
 LinkingTo: Rcpp
+Packaged: 2014-06-08 23:57:59 UTC; herb
+Repository: CRAN
+Date/Publication: 2014-06-10 07:02:51
