--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,4 +36,4 @@ importFrom("magic", adiag)
 importFrom("robustbase", covMcd)
 
 useDynLib("rlme")
-importFrom(Rcpp, cppFunction)
+importFrom(Rcpp, evalCpp)
