--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: rlme
 Type: Package
-Title: Random Effects Nested Models
-Version: 0.1
-Date: 2013-01-07
-Author: Yusuf Bilgic and Herb Susmann
+Title: Rank-based Estimation and Prediction in Random Effects Nested
+        Models
+Version: 0.2
+Date: 2013-07-07
+Author: Yusuf Bilgic, Herb Susmann and Joseph McKean
 Maintainer: Yusuf Bilgic <bilgic@geneseo.edu>
-Description: Estimates fixed effects and predicts random effects in two
-        and three level random effects nested models.
+Description: Estimates robust rank-based fixed effects and predicts robust random effects in two- and three- level random effects nested models.
 License: GPL (>= 2)
-Depends: MASS, quantreg, nlme, mgcv, magic, stringr
-Packaged: 2013-02-05 18:25:56 UTC; ykb
+Imports: MASS, quantreg, nlme, mgcv, stringr, magic
+Packaged: 2013-07-21 21:47:57 UTC; ykb
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-02-06 09:58:49
+Date/Publication: 2013-07-22 01:00:23
