--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,3 @@
-#exportPattern("^[[:alpha:]]+")
-
-
 export(rlme)
 
 export(GR_est)
@@ -27,3 +24,11 @@ export(getlmestplot)
 
 export(summary.rlme)
 export(plot.rlme)
+
+
+importFrom("MASS", lmsreg, ltsreg, ginv, huber)
+importFrom("quantreg", rq.fit.br, rq.fit.fnb)
+importFrom("nlme", lme, random.effects)
+importFrom("stringr", str_extract_all)
+importFrom("mgcv", extract.lme.cov2)
+importFrom("magic", adiag)
